# finki-chat-bot

./: .env.example  .env.sample  .gitignore  .sonarcloud.properties  README.md  compose.prod.yaml  compose.yaml  docker-compose.prod.yaml  docker-compose.yaml  sonar-project.properties
.github/: dependabot.yaml
.github/workflows/: auto-merge.yaml  ci.yaml  docker-api.yaml  docker-content-api.yaml  docker-gpu-api.yaml  docker-usage-data.yaml  docker.yaml  lint-api.yaml  lint-content-api.yaml  lint-gpu-api.yaml  lint-usage-data.yaml  lint.yaml
api/: Dockerfile  gunicorn.conf.py  pyproject.toml  start.sh
api/app/: __main__.py  main.py  migrations.py
api/app/api/: chat.py  health.py  links.py  questions.py
api/app/constants/: db.py  defaults.py  errors.py  strings.py
api/app/data/: connection.py  db.py  links.py  questions.py
api/app/llms/: agents.py  chat.py  context.py  embeddings.py  google.py  gpu_api.py  mcp.py  models.py  ollama.py  openai.py  prompts.py  query_transform.py  rerank.py  responses.py  streams.py  utils.py
api/app/schema/: chat.py  embedding.py  link.py  question.py
api/app/schemas/: chat.py  health.py  links.py  questions.py
api/app/utils/: auth.py  config.py  database.py  exceptions.py  models.py  settings.py
api/resources/: schema.sql
content-api/: Dockerfile  pyproject.toml
content-api/app/: main.py
content-api/app/tools/: staff.py
gpu-api/: Dockerfile  gunicorn.conf.py  pyproject.toml
gpu-api/app/: __main__.py  main.py
gpu-api/app/api/: embeddings.py  health.py  rerank.py  streams.py
gpu-api/app/constants/: strings.py
gpu-api/app/llms/: bgam3.py  bge_m3.py  embeddings.py  models.py  multilingual_e5_large.py  qwen2_1_5_b_instruct.py  qwen2_5_7b_instruct.py  reranker.py  streams.py
gpu-api/app/schema/: models.py
gpu-api/app/schemas/: embeddings.py  health.py  rerank.py  streams.py
gpu-api/app/utils/: exceptions.py  logger.py  settings.py
scripts/: convert_faqs.py  convert_generic.py  convert_links.py
usage-data/: Dockerfile  gunicorn.conf.py  pyproject.toml
usage-data/app/: main.py
usage-data/app/api/: events.py  health.py
usage-data/app/data/: connection.py  db.py
usage-data/app/schemas/: events.py  health.py
usage-data/app/utils/: settings.py
