[project]
name = "finki-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.120.3",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.1",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = ["asyncpg-stubs>=0.30.2", "mypy>=1.18.2", "ruff>=0.14.2"]

[tool.mypy]
python_version = "3.13"
plugins = ['pydantic.mypy']

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "TRY003",
    "PLR0911",
    "RET504",
    "RUF001",
    "E501",
    "PLR0913",
]
