[project]
name = "finki-chat-bot-gpu-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi[all]>=0.120.3",
    "gunicorn>=23.0.0",
    "langchain>=1.0.3",
    "langchain-huggingface>=1.0.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.7.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.mypy]
python_version = "3.13"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "TRY003",
    "PLR0911",
    "RET504",
    "RUF001",
    "E501",
    "PLR0913",
]
