[project]
name = "usage-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "gunicorn>=23.0.0",
    "motor>=3.7.1",
    "pydantic>=2.11.5",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]

[tool.mypy]
python_version = "3.13"
plugins = ['pydantic.mypy']

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "B",
    "COM",
    "C4",
    "DTZ",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "PTH",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "PLR2004",
    "PLR0912",
    "PLR0915",
    "TRY003",
    "PLR0911",
    "RET504",
    "RUF001",
    "E501",
    "PLR0913",
]
